force-app/main/default/objects/StockInOut__c/StockInOut__c.object-meta.xml
<CustomObject>
    <label>Stock In/Out</label>
    <nameField>
        <displayFormat>STK-{000000}</displayFormat>
        <label>Stock In/Out ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock In/Out</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>