force-app/main/default/objects/StockInOut__c/fields/MNFProcess__c.field-meta.xml
<CustomField>
    <fullName>MNFProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MNF Process</label>
    <referenceTo>ManufactureProcess__c</referenceTo>
    <relationshipLabel>Stock In/Out</relationshipLabel>
    <relationshipName>Stock_In_Out</relationshipName>
    <type>Lookup</type>
</CustomField>