force-app/main/default/objects/StockInOut__c/fields/QuantityOut__c.field-meta.xml
<CustomField>
    <fullName>QuantityOut__c</fullName>
    <label>Quantity-Out</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>