force-app/main/default/objects/StockInOut__c/fields/StockDate__c.field-meta.xml
<CustomField>
    <fullName>StockDate__c</fullName>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>