force-app/main/default/objects/StockInOut__c/fields/Warehouse_PIC__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stock_In_Out</relationshipName>
    <type>Lookup</type>
</CustomField>