force-app/main/default/objects/StockInOut__c/recordTypes/Stock_In.recordType-meta.xml
<RecordType>
    <fullName>Stock_In</fullName>
    <active>true</active>
    <label>Stock In</label>
</RecordType>