force-app/main/default/objects/StockInOut__c/recordTypes/Stock_Out.recordType-meta.xml
<RecordType>
    <fullName>Stock_Out</fullName>
    <active>true</active>
    <label>Stock Out</label>
</RecordType>